--- a/tex/bib.tex
+++ b/tex/bib.tex
@@ -1,13 +1,25 @@
 
-\clearpage
-\addcontentsline{toc}{chapter}{Bibliography}
 \begin{thebibliography}{9}
 
-\bibitem{Featherstone}
+\bibitem{bib_Featherstone}
   Roy Featherstone,
   \emph{Rigid Body Dynamics Algorithms}.
   Springer Science+Business Media, LLC,
-  2nd edition,
+  $2^{nd}$ edition,
   2008.
 
+\bibitem{bib_torseur}
+  E. Ramis, C. Deschamps et J. Odoux,
+  \emph{Algèbre et applications à la géométrie}.
+  Masson, coll. "Cours de mathématiques spéciales"
+  $2^{edition}$, 1987 (ISBN 2-225-63404-1),
+  chap. 8 ("Les torseurs"), p. 276-294
+  
+\bibitem{bib_champVecteurs}
+  José-Philippe Pérez,
+  \emph{Mécanique, Fondements et applications}.
+  Masson Sciences,
+  $6^{e}$ édition, 2001 (ISBN 2-10-005464-3),
+  chap. 1 ("Calcul vectoriel. Torseurs") - section IV, V et VI, p. 8-15, 295
+  
 \end{thebibliography}
